listo para mobile

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <div class="col-12">
     <div class="row">
       <div class="col-1"></div>
-      <p id="title" class="col-2">Start Bootstrap</p>
-    <div class="hide-after">
-      <p class="col-1 sub" id="home">Home</p>
-      <p class="col-1 sub">About</p>
-      <p class="col-1 sub">Services</p>
-      <p class="col-1 sub">Contact</p>
+      <p id="title" class="col-8">Spring Day</p>
+    <div class="col-3 hide-after">
+      <p class="sub" id="home">Home</p>
+      <p class="sub">About</p>
+      <p class="sub">Services</p>
+      <p class="sub">Contact</p>
     </div>
       <i class="fa fa-bars"  aria-hidden="true"></i>
         </div>
@@ -36,14 +36,14 @@
 
   <div class="row">
     <div class="col-1"></div>
-    <div class="ml-4 col-6">
+    <div id="nature"class="ml-4 col-6">
       <h2 id="nat-title">Nature</h2>
       <p class="nat-p">When we don’t move like Her, without patients or regard for the life around us, it causes pain. Often times are forward momentum is motivated with good intentions, trying to help people as fast as we possibly can, but very often the wrongs we must right were our fault to begin with, and it is our burden to fix them. </p>
       <p class="nat-p">Our passion for progress must be focused on this and not the selfishness that harms. and it makes so much sense that so many of those wrongs are committed
           against nature and of course we’re the ones who must pay the price. How incredibly foolish to harm the life that sustains you, the force that created you.</p>
           <button id="btn-act" type="button" name="button">Take Action</button>
     </div>
-    <div class="ml col-4">
+    <div id="brave"class="ml col-4">
       <h2 id="br-title">Be brave</h2>
       <p class="br-p">Everything you have ever wanted</p>
       <p class="br-p">is on the other side of fear.</p>
@@ -51,9 +51,9 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-1"></div>
+    <div id="space-box" class="col-1"></div>
 
-  <div class="ml-4 col-3">
+  <div id="fst-box" class="ml-4 col-3">
      <div class="w-img">
         <img class="boximg" src="assets/img/box1.jpg" alt="">
 
@@ -71,7 +71,7 @@
 
 
 
-<div class="col-3">
+<div id="scnd-box" class="col-3">
   <div class="w-img">
       <img class="boximg" src="assets/img/box2.png" alt="">
 
@@ -87,7 +87,7 @@
 </div>
 
 
-  <div class="col-3">
+  <div id="thrd-box" class="col-3">
     <div class="w-img">
         <img class="boximg" src="assets/img/box3.jpg" alt="">
         <div class="border">
