media query y responsive añadido

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       <p class="sub">Services</p>
       <p class="sub">Contact</p>
     </div>
-      <i class="fa fa-bars"  aria-hidden="true"></i>
+      <div class="menu-h">
+        <i class="fa fa-bars"  aria-hidden="true"></i>
+      </div>
         </div>
   </div>
   </header>
@@ -35,7 +37,7 @@
   </div>
 
   <div class="row">
-    <div class="col-1"></div>
+    <div id="space-nat"class="col-1"></div>
     <div id="nature"class="ml-4 col-6">
       <h2 id="nat-title">Nature</h2>
       <p class="nat-p">When we don’t move like Her, without patients or regard for the life around us, it causes pain. Often times are forward momentum is motivated with good intentions, trying to help people as fast as we possibly can, but very often the wrongs we must right were our fault to begin with, and it is our burden to fix them. </p>
